Register Logic and Header Extra Space Fix

--- a/frontend-helloapp/src/Styles/Header.css
+++ b/frontend-helloapp/src/Styles/Header.css
@@ -4,9 +4,6 @@
     justify-content: space-between;
   }
 
-  .App {
-    text-align: center;
-  }
   
 
   .flexStart{
